# microc-arm-compiler

./: README.md  microc_arm_compile.sh  xdsl_arm_backend.py  xdsl_arm_parser.py  xdsl_llvm_operations.py  xdsl_microc.py  xdsl_riscv_lowering.py
pico_implementation/: CMakeLists.txt  README.md  arm_assembly.S  blink_led.c  build.sh
pico_implementation/test_codes/: pico2_asm_demo.uf2  test1.uf2  test2_5sec.uf2
sample_codes/: arm_code.arm  microc_1.arm  microc_1.c  microc_1.ll  microc_1.mlir  microc_2.arm  microc_2.c  microc_2.ll  microc_2.mlir  microc_3.arm  microc_3.c  microc_3.ll  microc_3.mlir  microc_4.arm  microc_4.c  microc_4.ll  microc_4.mlir
